Fix styling of BETA tag so it displays nicely on mobile

--- a/apps/frontend/src/assets/sass/layout/topbar/_topbar_common.scss
+++ b/apps/frontend/src/assets/sass/layout/topbar/_topbar_common.scss
@@ -13,7 +13,7 @@
 
     .layout-topbar-left {
       height: 100%;
-      width: 240px;
+      width: 300px;
       padding: 11px 14px 13px;
       @include flex();
       @include flex-align-center();
